# consensus-algorithms-comparison

./: .gitignore  CMakeLists.txt  LICENSE  README.md
emulation/: topology_5_nodes.py
network/: CMakeLists.txt  grpc_messaging.cpp  grpc_messaging.hpp  messaging_interface.hpp  test_messaging.cpp
proto/: CMakeLists.txt  node.proto
src/: raft_algorithm.cpp  raft_algorithm.hpp
